Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/CoordinatedSceneState.cpp
@@ -46,6 +46,7 @@ CoordinatedSceneState::~CoordinatedSceneState()
 {
     ASSERT(m_layers.isEmpty());
     ASSERT(m_pendingLayers.isEmpty());
+    ASSERT(m_pendingLayersToRemove.isEmpty());
     ASSERT(m_committedLayers.isEmpty());
 }
 
@@ -71,6 +72,7 @@ void CoordinatedSceneState::removeLayer(CoordinatedPlatformLayer& layer)
 {
     ASSERT(isMainRunLoop());
     m_layers.remove(layer);
+    m_layersToRemove.add(layer);
     m_didChangeLayers = true;
 }
 
@@ -84,25 +86,32 @@ bool CoordinatedSceneState::flush()
 
     Locker pendingLayersLock { m_pendingLayersLock };
     m_pendingLayers = m_layers;
+    m_pendingLayersToRemove.addAll(WTF::move(m_layersToRemove));
+
     return true;
+}
+
+void CoordinatedSceneState::commitPendingLayers()
+{
+    ASSERT(!isMainRunLoop());
+    Locker pendingLayersLock { m_pendingLayersLock };
+    for (auto& layer : m_pendingLayersToRemove)
+        layer->invalidateTarget();
+    m_pendingLayersToRemove.clear();
+    if (!m_pendingLayers.isEmpty())
+        m_committedLayers = WTF::move(m_pendingLayers);
 }
 
 const HashSet<Ref<CoordinatedPlatformLayer>>& CoordinatedSceneState::committedLayers()
 {
-    ASSERT(!isMainRunLoop());
-    Locker pendingLayersLock { m_pendingLayersLock };
-    if (!m_pendingLayers.isEmpty()) {
-        auto removedLayers = m_committedLayers.differenceWith(m_pendingLayers);
-        m_committedLayers = WTF::move(m_pendingLayers);
-        for (auto& layer : removedLayers)
-            layer->invalidateTarget();
-    }
+    commitPendingLayers();
     return m_committedLayers;
 }
 
 void CoordinatedSceneState::invalidateCommittedLayers()
 {
     ASSERT(!isMainRunLoop());
+    commitPendingLayers();
     m_rootLayer->invalidateTarget();
     while (!m_committedLayers.isEmpty()) {
         auto layer = m_committedLayers.takeAny();
@@ -121,6 +130,7 @@ void CoordinatedSceneState::invalidate()
 
     Locker pendingLayersLock { m_pendingLayersLock };
     m_pendingLayers = { };
+    m_pendingLayersToRemove = { };
 }
 
 void CoordinatedSceneState::waitUntilPaintingComplete()
